--- a/index.html
+++ b/index.html
@@ -180,7 +180,28 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
-
+<script type="text/javascript">
+  var fireballSize = 22;
+  var getFireballSpeed = function(left){
+    if(left == true){
+      return 5;
+    }else{
+      return 2;
+    }
+  };
+  var wisardSpeed = 3;
+  var wisardWidth = 70;
+  var getWisardHeight = function(wisardWidth){
+    return 1.337 * wisardWidth;
+  };
+  var getWisardX = function(width){
+    return width/2;
+  };
+  var getWisardY = function(height){
+    return (height/3)*2;
+  };
+  
+</script>
 <script src="js/game.js"></script>
 
 </body>
