--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
 </template>
 
 <script src="js/stat.js"></script>
+<script src="js/setup.js"></script>
 <script type="text/javascript">
   var fireballSize = 22;
   var getFireballSpeed = function(left){
